# vigil

./: .env.example  .gitignore  LICENSE  README.md  generate_prompts.py  mock_report.py  pyproject.toml  rebuild_db.py  render.yaml  run2.txt  run_three.bat  start_dev.py
.github/workflows/: weekly_run.yml
api/: db_queries.py  main.py  schemas.py
api/routes/: models.py
data/: drift_monitor.db
docs/screenshots/: README.md
frontend/: verify.js
frontend/app/: layout.tsx  page.tsx
frontend/app/api/revalidate/: route.ts
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/app/models/[id]/: loading.tsx  page.tsx
frontend/app/reports/[id]/: page.tsx
frontend/components/: AutoRefresh.tsx  BsiTrendChart.tsx  SparklineChart.tsx  StatusBadge.tsx
frontend/lib/: api-server.ts  api.ts  constants.ts
harness/: config.py  db.py  runner.py
harness/baseline/: manager.py
harness/drift/: bsi.py  detector.py
harness/prompts/: prompt_versions.json  prompts_v1.json  prompts_v2.json
harness/scorers/: deterministic.py  statistical.py
